--- a/anasade/app/templates/productprice/list.html
+++ b/anasade/app/templates/productprice/list.html
@@ -10,6 +10,7 @@
     <div class="d-flex justify-content-end mb-3">
         <a href="{% url 'productprice-create' %}" class="btn btn-primary">Ajouter un prix</a>
         <a href="{% url 'productprice-import' %}" class="btn btn-secondary mx-2">Importer un fichier Excel</a>
+        <a href="{% url 'productprice-export' %}" class="btn btn-success mb-3">Exporter en Excel</a>
     </div>
     <table class="table table-striped table-hover">
         <thead class="table-dark">
